# anamnesis

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  NOTICE  README.md
.github/workflows/: ci.yml  desktop.yml  pages.yml  publish.yml
bench/cross-machine-tokens/: README.md  RUNBOOK.md  conftest.py  lib.py  make_chart.py  measure_tokens.py  setup_synthetic.py
bench/cross-machine-tokens/tests/: test_lib.py
dashboard/: .gitignore  README.md  electron-builder.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
dashboard/deploy/: README.md  anamnesis-dashboard.service  dashboard.env.example
dashboard/e2e/: seed.ts  standalone-server.test.ts
dashboard/electron/: main.ts  preload.ts  server-process.test.ts  server-process.ts  tsconfig.json
dashboard/public/: sw.js
dashboard/scripts/: afterPack.cjs  afterPack.js  build-electron.mjs  clean-build-artifacts.mjs  desktop-build.mjs  make-icons.mjs  serve.cjs  standalone-assets.mjs
dashboard/src/app/: globals.css  layout.tsx  manifest.test.ts  manifest.ts  page.tsx  pwa-metadata.test.ts  pwa-metadata.ts
dashboard/src/app/browse/: page.tsx
dashboard/src/app/history/: page.tsx
dashboard/src/app/machines/: page.tsx
dashboard/src/app/offline/: page.tsx
dashboard/src/app/review/: page.tsx
dashboard/src/app/settings/: helpers.test.ts  helpers.ts  page.tsx  settings-form.tsx
dashboard/src/components/: app-frame.tsx  app-toaster.tsx  auto-refresh.tsx  brand-mark.tsx  cli-preview-button.tsx  command-menu.tsx  commit-graph.tsx  count-up.tsx  diff-view.tsx  hero-canvas.tsx  history-explorer.tsx  machines-view.tsx  markdown.tsx  memory-map.tsx  note-browser.tsx  note-card.tsx  note-editor.tsx  note-history-explorer.tsx  note-row.tsx  reflection-review.tsx  reindex-button.tsx  review-page-actions.tsx  sidebar.tsx  sw-register.tsx  sync-control.tsx  theme-provider.tsx  theme-toggle.tsx  topbar.tsx
dashboard/src/components/ui/: badges.tsx  button.tsx  misc.tsx
dashboard/src/lib/: cli.ts  cn.ts  config.ts  db.test.ts  db.ts  diff.test.ts  diff.ts  format.test.ts  format.ts  git.test.ts  git.ts  graph.test.ts  graph.ts  history.ts  markdown.test.ts  markdown.ts  provenance.test.ts  provenance.ts  repo.ts  search.test.ts  settings.test.ts  settings.ts  store.test.ts  store.ts  types.ts
examples/: hooks.settings.json
server/: README.md  pyproject.toml
server/src/anamnesis/: __init__.py  capture.py  cli.py  config.py  dedup.py  eval.py  inject.py  llm_summarizer.py  merge.py  migrate.py  native_import.py  onboard.py  provenance.py  redact.py  reflect.py  server.py  store.py  sync.py
server/tests/: conftest.py  test_capture.py  test_cli.py  test_config.py  test_dedup.py  test_eval.py  test_inject.py  test_llm_summarizer.py  test_merge.py  test_migrate.py  test_native_import.py  test_onboard.py  test_provenance.py  test_redact.py  test_reflect.py  test_server.py  test_store.py  test_sync.py
site/: next.config.mjs  package.json  pnpm-lock.yaml
site/app/: global.css  layout.tsx
site/app/(home)/: page.tsx
site/app/docs/[[...slug]]/: page.tsx
site/components/: copy-command.tsx  search-dialog.tsx  wordmark.tsx
site/components/landing/: comparison.tsx  demo.tsx  feature-bento.tsx  hero.tsx  how-it-works.tsx  icons.tsx  install-pill.tsx  reveal.tsx  site-footer.tsx  token-proof.tsx
site/components/mdx/: mermaid.tsx
site/content/docs/: index.mdx  meta.json
site/content/docs/guide/: across-machines.mdx  curating.mdx  dashboard.mdx  faq.mdx  how-it-works.mdx  index.mdx  install.mdx  meta.json
site/content/docs/internals/: architecture.mdx  capture-and-injection.mdx  dashboard-internals.mdx  data-model.mdx  design-decisions.mdx  mcp-server.mdx  meta.json  recall.mdx  reflection.mdx  sync.mdx
site/lib/: asset.ts  layout.shared.tsx  mark-path.ts  shared.ts
(+26 files in other folders)
