[project]
name = "anamnesis"
version = "0.0.1"
description = "Cross-machine, file-first memory layer for Claude Code (MCP server)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Oscar Devos" }]
keywords = ["claude-code", "mcp", "agent-memory", "fastmcp", "sqlite", "local-first"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  # The MCP substrate. Pinned loosely until the server module lands.
  "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]
# Optional semantic recall - added only when keyword search proves insufficient.
vectors = [
  "sqlite-vec>=0.1",
]

[project.urls]
Homepage = "https://github.com/oscardvs/anamnesis"
Repository = "https://github.com/oscardvs/anamnesis"

# Console entry point - uncomment when server/src/anamnesis/server.py exists.
# [project.scripts]
# anamnesis = "anamnesis.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anamnesis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
