[project]
# Distribution name on PyPI ("anamnesis" is taken by an unrelated package).
# The import package and the CLI command are both still `anamnesis`.
name = "anamnesis-memory"
version = "0.0.1"
description = "Cross-machine, file-first memory layer for Claude Code (MCP server)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Oscar Devos" }]
keywords = ["claude-code", "mcp", "agent-memory", "fastmcp", "sqlite", "local-first"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  # Core store: markdown front-matter + stable ULID ids. The store layer is
  # deliberately independent of the MCP server layer (no fastmcp dependency here).
  "pyyaml>=6",
  "python-ulid>=2",
  # python-ulid imports `from typing_extensions import Self` unconditionally, yet only
  # declares typing_extensions for old Python. Without this, a base-only install (which
  # is exactly how the hooks invoke `anamnesis`) omits it and crashes on Python >= 3.11.
  "typing-extensions>=4",
]

[project.optional-dependencies]
# The MCP server layer (installed when server.py lands).
mcp = [
  "fastmcp>=3.0",
]
# Optional semantic recall - added only when keyword search proves insufficient.
vectors = [
  "sqlite-vec>=0.1",
]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML>=6",
]

[project.urls]
Homepage = "https://github.com/oscardvs/anamnesis"
Repository = "https://github.com/oscardvs/anamnesis"

# Console entry point: the CLI the hooks invoke; `anamnesis serve` runs the
# FastMCP server over stdio (the default when no subcommand is given).
[project.scripts]
anamnesis = "anamnesis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anamnesis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
